# isaac

./: .cproject  .gitignore  .project  .travis.yml  AUTHORS  CMakeLists.txt  Doxyfile  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac  valgrind.supp
apps/: Makefile.am  Makefile.in  acd.php  app_acd.c  app_call.c  app_classic.c  app_debug.c  app_help.c  app_login.c  app_ping.c  app_queue.c  app_queuestatus.c  app_status.c  app_utils.c  res_lua.c
autom4te.cache/: output.0  requests  traces.0  traces.1
conf/: Makefile.am  Makefile.in  acd.conf  call.conf  conference.conf  isaac.conf  login.conf  queue.conf  status.conf
conf/logrotate.d/: isaac
conf/rsyslog/: rsyslog.conf.append
debian/: init  postinst  rules
doc/: README.dox  build
examples/: app_debug.c  app_queuestatus.c
extra/: Makefile  Makefile.am  Makefile.in  isaac.conf
extra/debian/: Dockerfile  changelog  control  init  install  postinst  rules  sources.list
extra/mon/: Makefile  Makefile.am  Makefile.in  mon.cf
extra/mon/alert.d/: isaac.alert  isaac.upalert
extra/mon/mon.d/: isaac.monitor
include/: app.h  cli.h  filter.h  isaac.h  manager.h  remote.h  server.h  session.h  util.h
ivozng/: Makefile.am  acd.php  app_acd.c  app_call.c  app_classic.c  app_confbridge.c  app_conference.c  app_login.c  app_ping.c  app_queue.c  app_status.c  app_utils.c  res_lua.c
modules/: Makefile.am  app_redirect.c
mon/: Makefile.am  Makefile.in
mon/alert.d/: isaac.alert  isaac.upalert
mon/mon.d/: isaac.monitor
src/: Makefile.am  Makefile.in  app.c  app.h  cfg.c  cfg.h  cli.c  cli.h  config.h.cmake  filter.c  filter.h  gasyncqueuesource.c  gasyncqueuesource.h  hook.c  hook.h  isaac.c  isaac.h  log.c  log.h  main.c  main.h  manager.c  manager.h  module.c  module.h  pidfile.c  pidfile.h  remote.c  remote.h  server.c  server.h  session.c  session.h  util.c  util.h
